--- a/src/templates/sanpham/chi_tiet.html
+++ b/src/templates/sanpham/chi_tiet.html
@@ -69,7 +69,7 @@
                                                 <th>Chiều cao</th><td>{{ object.chieucao }} cm</td>
                                             </tr>
                                             <tr>
-                                                <th>Chất liệu</th><td>40% wood, 37% cotton, 23% plastic</td>
+                                                <th>Chất liệu</th><td>{{ object.chatlieu }}</td>
                                             </tr>
                                         </tbody>
                                     </table>
