--- a/src/templates/timkiem/search_form.html
+++ b/src/templates/timkiem/search_form.html
@@ -1,3 +1,12 @@
-<form class="col-12 col-md-12 col-sm-12 col-xs-12 filters-pane search-form" id="search-box" method="GET" action="{% url 'search:query' %}"  value="{{ request.GET.q }}">
-    <input type="text" class="form-control" name="q" placeholder="Bạn muốn tìm kiếm điều gì?">
+<form class="col-md-6 offset-md-3 col-sm-12 col-xs-12 filters-pane search-form " id="search-box" method="GET" action="{% url 'search:query' %}"  value="{{ request.GET.q }}">
+    <div class="wrap-input100 validate-input">
+        <input type="text" name="q" class="input100" id="email" placeholder="Bạn muốn tìm kiếm điều gì?">
+        <span class="focus-input100 material-icons"></span>
+    </div>    
 </form>
+
+{% comment %} <div class="wrap-input100 validate-input">
+    <span class="label-input100">Email</span>
+    <input type="text" name="email" class="input100" id="email" value="{{ taikhoan.email }}"  disabled>
+    <span class="focus-input100 material-icons"></span>
+</div> {% endcomment %}
