--- a/src/templates/base/css.html
+++ b/src/templates/base/css.html
@@ -2,9 +2,11 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="{% static 'css/bootstrap/bootstrap.min.css' %}" >
     <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="{% static 'css/themes/font.css' %}" >
+    <link rel="stylesheet" href="{% static 'css/themes/fonts.css' %}" >
     <!-- Google Material Icons -->
     <link rel="stylesheet" media="screen" href="{% static 'fonts/MaterialIcons/material-icons.min.css' %}">
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" media="screen" href="{% static 'fonts/font-awesome/css/font-awesome.min.css' %}">
     <!-- Page Preloading -->
     <script src="{% static 'js/vendor/page-preloading.js' %}"></script>
     <!-- Animation -->
