--- a/src/templates/base/footer.html
+++ b/src/templates/base/footer.html
@@ -1,30 +1,28 @@
 {% load static %}
+<p>&nbsp</p>
 <footer id="footer" class="footer">
 	<div class="column">
-		<p class="text-sm">Need support? Call <span class="text-primary">(0126) 9794-806</span></p>
+		<p class="text-sm">Hổ trợ <span class="text-primary">(0126) 9794-806</span></p>
 		<div class="social-bar text-center space-bottom">
-		<a href="#" class="sb-skype" data-toggle="tooltip" data-placement="top" title="Skype">
-			<i class="socicon-skype"></i>
+		<a href="#" class="sb-pinterest" data-toggle="tooltip" data-placement="top" title="Pinterest">
+			<i class="fa fa-pinterest fa-2x" aria-hidden="true"></i>
 		</a>
 		<a href="#" class="sb-facebook" data-toggle="tooltip" data-placement="top" title="Facebook">
-			<i class="socicon-facebook"></i>
-		</a>
-		<a href="#" class="sb-google-plus" data-toggle="tooltip" data-placement="top" title="" data-original-title="Google+">
-			<i class="socicon-googleplus"></i>
+			<i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i>
 		</a>
 		<a href="#" class="sb-twitter" data-toggle="tooltip" data-placement="top" title="Twitter">
-			<i class="socicon-twitter"></i>
+				<i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
 		</a>
 		<a href="#" class="sb-instagram" data-toggle="tooltip" data-placement="top" title="" data-original-title="Instagram">
-			<i class="socicon-instagram"></i>
+			<i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
 		</a>
 		</div><!-- .social-bar -->
 		<p class="copyright">&copy; 2018. Made with <i class="text-danger material-icons favorite"></i> by Ryan Code Team.</p>
 	</div><!-- .column -->
 	<div class="column">
 		<h3 class="widget-title">
-		Subscription
-		<small>To receive latest offers and discounts from the shop.</small>
+		Đăng ký nhận mail
+		<small>Để nhận các ưu đãi và giảm giá mới nhất</small>
 		</h3>
 		<form action="" method="post" target="_blank" class="subscribe-form" novalidate>
 			<input type="email" class="form-control" name="EMAIL" placeholder="Your e-mail">
@@ -35,10 +33,10 @@
 	</div><!-- .column -->
 	<div class="column">
 		<h3 class="widget-title">
-		Payment Methods
-		<small>We support one of the following payment methods.</small>
+		Phương thức thanh toán
+		<small>Chúng tôi hỗ trợ một trong các phương thức thanh toán sau.</small>
 		</h3>
-		<div class="cards"><img src="{% static 'img/brands/cards.png' %}" alt="Cards"></div>
+		<div class="cards"><img src="{% static 'img/brands/cards3.png' %}" alt="Cards"></div>
 		<!-- Scroll To Top Button -->
 		<div class="scroll-to-top-btn"><i class="material-icons trending_flat"></i></div>
 	</div><!-- .column -->
